<resources>
  <string name="app_name">GymTimer</string>
  <string name="start">Start</string>
  <string name="workout_time">Workout Time</string>
  <string name="sets">Sets</string>
  <string name="set_break">Set Break</string>
  <string name="add_new_timer">Add New Timer</string>
  <string name="delete_selected_timers">Delete Selected Timers</string>
  <string name="edit_timer">Edit Timer</string>
  <string name="groups">Groups</string>
  <string name="ignite_group">Ignite Group</string>
  <string name="workout_name">Workout Name</string>
  <string name="initial_time">00:00</string>
  <string name="break_last_3_sec">00:03</string>
  <string name="save_button">Save Button</string>
  <string name="initial_value_number">00</string>
  <string name="select_group">Select Group</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="workout_name_cannot_be_empty">Workout Name can not be Empty!</string>
  <string name="workout_deleted">&#160;Workout Deleted</string>
  <string name="undo_delete">Undo Delete</string>
  <string name="workout_added_back">&#160;Workout Added Back.</string>
  <string name="select_all">Select All</string>
  <string name="selected">&#160;Selected</string>
  <string name="no_items_selected">No Item(s) Selected!</string>
  <string name="items_deleted">&#160;Item(s) Deleted.</string>
  <string name="break_on">Break</string>
  <string name="group_break">Group Break</string>
  <string name="stop_button">Stop Button</string>
  <string name="play_pause_button">Play/Pause Button</string>
  <string name="cancel_break">Cancel Break</string>
  <string name="set">Set:&#160;</string>
  <string name="in_workout_alerts">In Workout Alerts</string>
  <string name="_2">2.</string>
  <string name="_1">1.</string>
  <string name="inserted_successfully">&#160;Inserted Successfully.</string>
  <string name="updated_successfully">&#160;Updated Successfully.</string>
  <string name="group_name">Group Name</string>
  <string name="add_new_group">Add New Group</string>
  <string name="edit_group">Edit Group</string>
  <string name="timer_info">Timer Info</string>
  <string name="select_timers">Select Timers</string>
  <string name="timers_added_at_the_end">&#160;timer(s) added at the End.</string>
  <string name="group_name_cannot_be_empty">Group Name cannot be Empty!</string>
  <string name="no_workouts_present">No Workouts Present.</string>
  <string name="linkgrouptimer_already_present">Record with similar data already present.</string>
  <string name="group_timers_list">Group Timers List</string>
  <string name="group_deleted">&#160;group deleted</string>
  <string name="group_added_back">&#160;group added back.</string>
  <string name="string_empty" />
  <string name="expand_group_for_timer_list">Expand Group for Timer List</string>
  <string name="could_not_undo_as_screen_closed">Could not Undo as Screen Closed.</string>
  <string name="presses_too_soon">Pressed too soon!!</string>
  <string name="timer">Timer</string>
  <string name="group">Group</string>
  <string name="next_timer">Next Timer</string>
  <string name="last_timer">Last Timer</string>
</resources>