<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:id="@+id/timerCard"
  app:cardBackgroundColor="@color/transparent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_20">
    <TextView
      android:layout_width="@dimen/card_timer_name_width"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:singleLine="true"
      android:id="@+id/groupName"
      android:textSize="@dimen/size_25"
      android:textColor="@color/white"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

    <ImageButton
      android:layout_width="@dimen/expand_size"
      android:layout_height="@dimen/expand_size"
      android:id="@+id/expandGroupBtn"
      android:background="@drawable/expand_group"
      android:layout_marginEnd="@dimen/size_15"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/editGroup"
      android:contentDescription="@string/expand_group_for_timer_list" />

    <ImageButton
      android:layout_width="@dimen/expand_size"
      android:layout_height="@dimen/expand_size"
      android:id="@+id/editGroup"
      android:src="@drawable/edit_timer_card"
      android:background="@drawable/border_white"
      android:layout_marginEnd="@dimen/size_15"
      app:layout_constraintRight_toLeftOf="@+id/startBtn"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:contentDescription="@string/edit_timer"
      />

    <Button
      android:layout_width="wrap_content"
      android:layout_height="@dimen/size_40"
      android:id="@+id/startBtn"
      android:textSize="@dimen/size_15"
      android:background="@drawable/red_filled_bg"
      android:textColor="@color/white"
      android:text="@string/start"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
