<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">
  <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_height"
    app:cardBackgroundColor="@color/colorAccent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <ImageView
        android:id="@+id/gymLogo"
        android:layout_width="@dimen/header_img_height"
        android:layout_height="@dimen/header_image_width"
        android:layout_marginStart="@dimen/header_margin_left"
        android:layout_marginTop="@dimen/header_margin_top"
        android:src="@drawable/gym_logo_white"
        tools:ignore="ContentDescription"
        />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_image_width"
        android:layout_marginTop="@dimen/header_margin_top"
        android:layout_toEndOf="@+id/gymLogo"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"
        />

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navLayout"
        android:outlineProvider="paddedBounds">
        <ImageButton
          android:id="@+id/addTimerBtn"
          android:layout_width="@dimen/header_button_size"
          android:layout_height="@dimen/header_button_size"
          android:background="@drawable/border_white_filled_accent"
          android:elevation="@dimen/header_button_elevation"
          android:src="@drawable/add_timer_btn"
          android:layout_marginStart="@dimen/header_margin_image"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="@dimen/header_margin_bottom"
          android:contentDescription="@string/add_new_timer"
          />

        <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="@dimen/header_button_size"
          android:id="@+id/mngGrpsBtn"
          android:elevation="@dimen/header_button_elevation"
          android:background="@drawable/border_white_filled_accent"
          android:text="@string/groups"
          android:textColor="@color/white"
          android:layout_marginBottom="@dimen/header_margin_bottom"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          />

        <TextView
          android:layout_width="@dimen/two_digits_text_size_25"
          android:layout_height="wrap_content"
          android:id="@+id/itemSelectedCount"
          android:textColor="@color/red"
          android:textAlignment="center"
          android:text="@string/initial_value_number"
          android:layout_alignParentBottom="true"
          android:paddingTop="@dimen/size_5"
          android:paddingBottom="@dimen/size_5"
          android:layout_marginBottom="@dimen/size_20"
          android:textSize="@dimen/size_25"
          android:layout_marginStart="@dimen/size_30"
          android:visibility="gone"
          />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/itemSelectedCountText"
          android:text="@string/selected"
          android:textColor="@color/white"
          android:textAlignment="center"
          android:paddingTop="@dimen/size_5"
          android:paddingBottom="@dimen/size_5"
          android:layout_alignParentBottom="true"
          android:layout_toEndOf="@+id/itemSelectedCount"
          android:layout_marginBottom="@dimen/size_20"
          android:textSize="@dimen/size_25"
          android:visibility="gone"
          />
        <androidx.appcompat.widget.AppCompatCheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:theme="@style/RedCheck"
          android:id="@+id/selectAllCheck"
          android:scaleX="1.5"
          android:scaleY="1.5"
          android:layout_alignParentBottom="true"
          android:layout_toStartOf="@+id/delTimerBtn"
          android:layout_marginBottom="@dimen/size_15"
          android:layout_marginEnd="@dimen/header_margin_image"
          android:contentDescription="@string/select_all"
          android:visibility="gone"
          />
        <ImageButton
          android:id="@+id/delTimerBtn"
          android:layout_width="@dimen/header_button_size"
          android:layout_height="@dimen/header_button_size"
          android:layout_alignParentEnd="true"
          android:background="@drawable/border_white_filled_accent"
          android:elevation="@dimen/header_button_elevation"
          android:src="@drawable/delete_timers"
          android:layout_marginBottom="@dimen/header_margin_bottom"
          android:layout_alignParentBottom="true"
          android:layout_marginEnd="@dimen/header_margin_image"
          android:contentDescription="@string/delete_selected_timers"
          android:visibility="gone"
          />
      </RelativeLayout>
    </RelativeLayout>
  </androidx.cardview.widget.CardView>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@+id/cardView"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <FrameLayout
      android:id="@+id/fragmentContainer"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />
  </LinearLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/appProgressBar"
    android:background="@drawable/progress_bar_bg"
    app:layout_constraintTop_toBottomOf="@+id/cardView"
    app:layout_constraintBottom_toBottomOf="parent">
    <ProgressBar
      style="?android:attr/progressBarStyleLarge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"/>
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/startLayout"
    android:background="@color/black"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/cardView"
    app:layout_constraintBottom_toBottomOf="parent">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_centerInParent="true"
      android:background="@drawable/round_border_accent">

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/groupNameInClockTextContainer"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/white"
        android:visibility="gone"
        app:boxStrokeColor="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/groupNameInClockText"
          android:hint="@string/group"
          android:padding="@dimen/size_5"
          android:enabled="false"
          android:textSize="@dimen/size_30"
          android:textColor="@color/colorAccent"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timerNameInClockTextContainer"
        android:layout_below="@+id/groupNameInClockTextContainer"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginRight="@dimen/size_10"
        android:layout_alignParentStart="true"
        android:textColorHint="@color/white"
        android:visibility="gone"
        app:boxStrokeColor="@color/white"
        >
        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/timerNameInClockText"
          android:hint="@string/timer"
          android:padding="@dimen/size_5"
          android:enabled="false"
          android:textSize="@dimen/size_30"
          android:textColor="@color/colorAccent"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextTimerNameInClockTextContainer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:layout_below="@+id/timerNameInClockTextContainer"
        android:textColorHint="@color/white"
        android:visibility="gone"
        >
        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/nextTimerNameInClockText"
          android:hint="@string/next_timer"
          android:padding="@dimen/size_5"
          android:enabled="false"
          android:textSize="@dimen/size_20"
          android:textColor="@color/colorAccent"/>
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countDownText"
        android:textAlignment="center"
        android:paddingBottom="@dimen/size_5"
        android:layout_centerInParent="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size_100"
        android:textStyle="bold"
        android:visibility="gone"
        />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/mainTimerLayout">
        <TextView
          android:layout_width="@dimen/two_digits_text_size_50"
          android:layout_height="wrap_content"
          android:id="@+id/startMinText"
          android:textColor="@color/colorAccent"
          android:textSize="@dimen/timer_time_size"
          android:textAlignment="textEnd"
          />
        <TextView
          android:layout_width="@dimen/two_digits_text_size_50"
          android:layout_height="wrap_content"
          android:id="@+id/startSecText"
          android:textColor="@color/red"
          android:textSize="@dimen/timer_time_size"
          />
      </LinearLayout>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakOnText"
        android:layout_centerInParent="true"
        android:layout_below="@+id/mainTimerLayout"
        android:layout_marginTop="@dimen/size_5"
        android:textColor="@color/lightGreen"
        android:textSize="@dimen/size_20"
        android:visibility="gone"
        />

      <ImageButton
        android:layout_width="@dimen/size_40"
        android:layout_height="@dimen/size_40"
        android:id="@+id/cancelBreakBtn"
        android:src="@drawable/cancel_break_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_red"
        android:layout_below="@+id/breakOnText"
        android:layout_marginTop="@dimen/size_20"
        android:visibility="gone"
        android:contentDescription="@string/cancel_break" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/controlLayout"
        android:layout_centerInParent="true"
        android:layout_above="@+id/mainTimerLayout"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/size_5">
        <ImageButton
          android:layout_width="@dimen/size_40"
          android:layout_height="@dimen/size_40"
          android:id="@+id/stopBtn"
          android:background="@drawable/border_red"
          android:padding="@dimen/size_10"
          android:src="@color/red"
          android:layout_marginEnd="@dimen/size_10"
          android:contentDescription="@string/stop_button"
          />

        <ImageButton
          android:layout_width="@dimen/size_40"
          android:layout_height="@dimen/size_40"
          android:id="@+id/pauseBtn"
          android:padding="@dimen/size_5"
          android:background="@drawable/border_primary_dark"
          android:src="@drawable/pause_button_icon"
          android:layout_marginStart="@dimen/size_10"
          android:contentDescription="@string/play_pause_button"
          />
      </LinearLayout>
    </RelativeLayout>
  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
