<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".fragments.AddEditGroup">
  <TextView
    android:id="@+id/addEditLabelText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_20"
    android:layout_marginTop="@dimen/size_20"
    android:textColor="@color/colorPrimaryDark"
    android:textSize="@dimen/size_30"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <EditText
    android:id="@+id/groupNameEdit"
    android:layout_width="@dimen/size_300"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_20"
    android:layout_marginTop="@dimen/size_20"
    android:background="@drawable/border_white"
    android:ellipsize="end"
    android:hint="@string/group_name"
    android:inputType="text"
    android:paddingLeft="@dimen/size_10"
    android:paddingTop="@dimen/size_5"
    android:paddingRight="@dimen/size_10"
    android:paddingBottom="@dimen/size_5"
    android:singleLine="true"
    android:textColor="@color/white"
    android:textSize="@dimen/size_30"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addEditLabelText"
    tools:ignore="Autofill"
    />

  <ImageButton
    android:layout_width="@dimen/size_50"
    android:layout_height="@dimen/size_50"
    android:id="@+id/addTimerBtn"
    android:background="@drawable/border_white"
    android:src="@drawable/add_icon"
    android:layout_marginTop="@dimen/size_10"
    android:layout_marginBottom="@dimen/size_10"
    android:layout_marginEnd="@dimen/size_20"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/groupNameEdit"
    android:contentDescription="@string/add_new_timer"
    />

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/size_10"
    android:layout_marginBottom="@dimen/size_10"
    android:id="@+id/listLayout"
    app:layout_constraintBottom_toTopOf="@+id/saveGroupBtn"
    app:layout_constraintTop_toBottomOf="@+id/addTimerBtn">
    <androidx.recyclerview.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/timerListView"
      tools:listitem="@layout/ingroup_timer_card"
      />

    <View
      android:layout_width="@dimen/size_20"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:background="@drawable/fading_line"
      />
    <View
      android:layout_width="@dimen/size_20"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:rotation="180"
      android:background="@drawable/fading_line"
      />
  </FrameLayout>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/saveGroupBtn"
    android:text="@string/save"
    android:background="@drawable/red_filled_bg"
    android:textColor="@color/white"
    android:textSize="@dimen/size_15"
    android:layout_marginEnd="@dimen/size_20"
    android:layout_marginBottom="@dimen/size_20"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/cancelBtn"
    android:text="@string/cancel"
    android:background="@drawable/light_green_filled_bg"
    android:textColor="@color/white"
    android:textSize="@dimen/size_15"
    android:layout_marginStart="@dimen/size_20"
    android:layout_marginBottom="@dimen/size_20"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
