<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:id="@+id/timerCard"
  app:cardBackgroundColor="@color/transparent"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/size_20">
      <TextView
        android:layout_width="@dimen/card_timer_name_width"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:id="@+id/timerName"
        android:textSize="@dimen/size_25"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/size_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

      <TextView
        android:layout_width="@dimen/four_digits_text_size_25_colon"
        android:layout_height="wrap_content"
        android:id="@+id/inGroupTime"
        android:text="@string/initial_time"
        android:textSize="@dimen/card_value_size"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginEnd="@dimen/size_20"
        android:background="@drawable/border_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/moreInfoBtn"
        />

      <ImageButton
        android:layout_width="@dimen/size_30"
        android:layout_height="@dimen/size_30"
        android:id="@+id/moreInfoBtn"
        android:background="@drawable/more_info"
        android:layout_marginEnd="@dimen/size_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/timer_info"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/inGroupTimerLayout"
      android:visibility="gone">
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <NumberPicker
          android:id="@+id/inGroupTimeMin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:theme="@style/NumberPickerColor"
          />
        <NumberPicker
          android:id="@+id/inGroupTimeSec"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:theme="@style/NumberPickerColor"
          />
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/moreInfoView"
      android:visibility="gone"
      android:paddingBottom="@dimen/size_20"
      android:paddingRight="@dimen/size_20"
      android:paddingLeft="@dimen/size_20">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/workTimeText"
        android:text="@string/workout_time"
        android:textColor="@color/white"
        android:textSize="@dimen/card_header_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
      <TextView
        android:layout_width="@dimen/four_digits_text_size_25_colon"
        android:layout_height="wrap_content"
        android:id="@+id/workTimeValueText"
        android:textSize="@dimen/card_value_size"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/border_white_thin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/alertsContainer"
        android:layout_marginTop="@dimen/size_5"
        app:layout_constraintTop_toBottomOf="@+id/workTimeValueText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
          android:layout_width="@dimen/four_digits_text_size_25_colon"
          android:layout_height="wrap_content"
          android:id="@+id/alert1Text"
          android:textSize="@dimen/card_value_size"
          android:textColor="@color/white"
          android:background="@drawable/border_red"
          android:textAlignment="center"
          android:layout_marginEnd="@dimen/size_10"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />
        <TextView
          android:layout_width="@dimen/four_digits_text_size_25_colon"
          android:layout_height="wrap_content"
          android:id="@+id/alert2Text"
          android:textSize="@dimen/card_value_size"
          android:textColor="@color/white"
          android:background="@drawable/border_red"
          android:textAlignment="center"
          android:layout_marginStart="@dimen/size_10"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />
      </LinearLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setsText"
        android:text="@string/sets"
        android:textColor="@color/white"
        android:textSize="@dimen/card_header_size"
        android:layout_marginTop="@dimen/size_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertsContainer"
        />
      <TextView
        android:layout_width="@dimen/two_digits_text_size_25"
        android:layout_height="wrap_content"
        android:id="@+id/setsValueText"
        android:textSize="@dimen/card_value_size"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginStart="@dimen/size_20"
        android:textAlignment="center"
        android:background="@drawable/border_white_thin"
        app:layout_constraintTop_toBottomOf="@+id/alertsContainer"
        app:layout_constraintEnd_toEndOf="@+id/workTimeText"
        />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setBreakText"
        android:text="@string/set_break"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginEnd="@dimen/size_15"
        android:textSize="@dimen/card_header_size"
        app:layout_constraintTop_toBottomOf="@+id/alertsContainer"
        app:layout_constraintRight_toLeftOf="@+id/setBreakValueText"
        />
      <TextView
        android:layout_width="@dimen/four_digits_text_size_25_colon"
        android:layout_height="wrap_content"
        android:id="@+id/setBreakValueText"
        android:textSize="@dimen/card_value_size"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/size_10"
        android:textAlignment="center"
        android:background="@drawable/border_white_thin"
        app:layout_constraintTop_toBottomOf="@+id/alertsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </LinearLayout>
</androidx.cardview.widget.CardView>
